--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
     <header>
         Hello every one wellcome to my photo view.
     </header>
+    <nav>
+        <ul>
+            <li><a href="index.html" class="menu">Home</a></li>
+            <li><a href="multimedia.html" class="menu">Multimedia</a></li>
+            <li><a href="myphoto.html" class="menu">My photo view</a></li>
+        </ul>
+    </nav>
+
 
 </body>
