--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
     <meta charset="UTF-8">
     <title>Wellcome to my world</title>
 </html>
 <body>
     <header>
-        Hello every one wellcome to my photo view.
+        <h2>Hello every one wellcome to my photo view.</h2>
     </header>
     <nav>
         <ul>
@@ -13,6 +14,20 @@
             <li><a href="myphoto.html" class="menu">My photo view</a></li>
         </ul>
     </nav>
-
+    <main>
+        <article>
+            <header>I am glad to share my photos.</header>
+                <h3>What you should know.</h3>
+        </article>
+        <aside>
+            <p>* My photos are taken with mobile phone.*</p>
+            <p>* You can use my photos for free.*</p>
+            <p>*And I'm very glad that you came to this website!*</p>
+        </aside>
+    </main>
+            <footer>
+                <hr>
+                Produced by Miss.Napatsorn Kamsaard
+            </footer>
 
 </body>
