--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <meta charset="UTF-8">
     <title>Wellcome to my world</title>
+    <link rel="stylesheet" href="css/index.css">
 </html>
 <body>
     <header>
@@ -23,6 +24,7 @@
             <p>* My photos are taken with mobile phone.*</p>
             <p>* You can use my photos for free.*</p>
             <p>*And I'm very glad that you came to this website!*</p>
+            <p>***Have a battleship game!***</p>
         </aside>
     </main>
             <footer>
