--- a/multimedia.html
+++ b/multimedia.html
@@ -1,1 +1,22 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>The Battleship Game</title>
+        <link rel="stylesheet" href="css/multimedia.css">
+    </head>
+    <body>
+        <header>
+            <h1>Try playing it.</h1>
+        </header>
+        <nav>
+                <ul>
+                    <li><a href="index.html" class="menu">Home</a></li>
+                    <li><a href="multimedia.html" class="menu">Multimedia</a></li>
+                    <li><a href="myphoto.html" class="menu">My photo view</a></li>
+                </ul>
+            </nav>
+            <h1>Battleship Game</h1>
+        <script src="script/battleship.js"></script>
+    </body>
+</html>
