--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </nav>
     <main>
         <article>
-            <header>I am glad to share my photos.</header>
-                <h3>What you should know.</h3>
+            <h1>I am glad to share my photos.</h1>
+                <h3>"What you should know"</h3>
         </article>
         <aside>
             <p>* My photos are taken with mobile phone.*</p>
@@ -26,6 +26,7 @@
             <p>*And I'm very glad that you came to this website!*</p>
             <p>***Have a battleship game!***</p>
         </aside>
+        <img src="photo/HAPPY.png">
     </main>
             <footer>
                 <hr>
