--- a/myphoto.html
+++ b/myphoto.html
@@ -13,7 +13,8 @@
               <li> <a href="index.html" class="menu">Home</a></li>
               <li> <a href="multimedia.html" class="menu">Multimedia</a></li>
               <li> <a href="myphoto.html" class="menu">My photo view</a></li>
-          </ul>
+              <li><a href="aboutme.html" class="menu">About Me</a></li>
+            </ul>
       </nav>
       <main>
           <article>
