--- a/multimedia.html
+++ b/multimedia.html
@@ -14,6 +14,7 @@
                     <li><a href="index.html" class="menu">Home</a></li>
                     <li><a href="multimedia.html" class="menu">Multimedia</a></li>
                     <li><a href="myphoto.html" class="menu">My photo view</a></li>
+                    <li><a href="aboutme.html" class="menu">About Me</a></li>
                 </ul>
             </nav>
             <h1>Battleship Game</h1>
