--- a/aboutme.html
+++ b/aboutme.html
@@ -21,10 +21,11 @@
                 <section>
                 <table>
                         <h3>"My name is Napatsorn Kamsaard"</h3>
-                        <img src="photo/mee.jpg">
+                        <img src="photo/mena.jpg">
                         <h4>Email : napatsornfern8@gmail.com</h4>
                         <h4>Facebook fanpage : เรื่องเกมเกม</h4>
                         <h4>call : 0910587814</h4>
+                        <h4>Live in BKK(Thailand)</h4>
                     </table>
                 </section>
             </article>
