--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <main>
         <article>
             <h1>I am glad to share my photos.</h1>
+            <img src="photo/HAPPY.png">
                 <h3>"What you should know"</h3>
         </article>
         <aside>
